fixed navbar active class jumping

--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -12,7 +12,7 @@ footer {
     width: 100%;
     /* height: 200px; */
     /* background-color: #1B242F; */
-    padding: 50px 0 400px 0;
+    padding: 50px 0 500px 0;
     position: relative;
     background-color: #303030;
 }
